Fix nav spacing

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -138,7 +138,7 @@ nav {
             background-color: @gold-light;
 
             a {
-                transform: translateY(-2px);
+                transform: translateY(-1px);
             }
         }
 
@@ -150,7 +150,7 @@ nav {
     a {
         color: @almost-black;
         display: inline-block;
-        padding: @base-unit + 2px 0 @base-unit;
+        padding: @base-unit + 4px 0 @base-unit;
         text-decoration: none;
         transition: all 0.15s ease;
         width: 100%;
